--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: get_mac_address
 description: A new Flutter project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/vickyleu/get_mac_address
+repository: https://github.com/vickyleu/get_mac_address
 
 environment:
   sdk: ">=2.17.5 <3.0.0"
