--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'com.example.get_mac_address'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.7.0'
+    ext.kotlin_version = '1.7.10'
     repositories {
         google()
         mavenCentral()
@@ -47,6 +47,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.annotation:annotation:1.4.0'
-    implementation files('/Users/vickyleu/Develop/flutter/bin/cache/artifacts/engine/android-arm64-release/flutter.jar')
+    implementation 'androidx.annotation:annotation:1.5.0'
+    //noinspection GradlePath
+    compileOnly files('/Users/vickyleu/Develop/flutter/bin/cache/artifacts/engine/android-arm64-release/flutter.jar')
 }
