--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx4608m -Dfile.encoding=UTF-8
-org.gradle.java.home=/Applications/Android\ Studio.app/Contents/jre/Contents/Home/
+#org.gradle.java.home=/Applications/Android\ Studio.app/Contents/jre/Contents/Home/
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
