--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,2 +1,6 @@
-#Mon Jul 04 10:24:22 CST 2022
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
+#Mon Oct 31 15:40:42 CST 2022
+distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-bin.zip
+distributionPath=wrapper/dists
+zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
